Added validation for beacon time that it matches the correct format
Fix StartAnotherImplant command for python implant
Rename RandomURI column in html output to Context, and print it as domain\username @ hostname
Move service instructions to readme so that poshc2.service can just be copied to /lib/systemd/system

4.7 (03/02/19)
==============
Added Opsec.py to allow users to state various command that they DO NOT want to run
Added Alias.py to allow users to have their own alias for various commands
Fixed HTML output to sort formatting once again

4.6 (26/12/18)
==============
Updated quickcommand on restart with new IP address
re-print quickstart when restarting C2Server.py
Updated migrate command in implant handler & added Escape for HTML output
Major refector of the portscanner by rolen
Fixed proxy payloads for powershell implant
Updated tasks command
Fixed linuxprivchecker to work through a proxy
Fixed config output for Apache rewrite rules by console
Added ability to load and execute LinuxPrivChecker in memory on *nix by pwndexter
Updated Core DLL for Sharp implant
Updated kill-implant options on Sharp implant
Added Sharp Implant and corresponding DLLs/Shellcode

4.5 (19/11/18)
==============
Removed Invoke-Enum
Merged Get-TokenElevationType.ps1 by jmhickman
Added TLS Config to Python Server
Updated README
Updated Get-IPAddress
Merged OfflineReportGenerator.py by skahwah
Updated to latest PowerUp.ps1
Updated INSTALL notes
Updated to work with FIPSAlgorithmPolicy
Updated to latest Invoke-Kerberoast & Invoke-Mimikatz
Removed process start for Netsh.exe on non migrate executable

4.4 (10/11/18)
==============
Inject Shellcode 32bit to 6bit using https://github.com/Coder666/Invoke-CreateRemoteThread64
Added simple Get-IPConfig cmdlet
Updated to include most recent commits
Updated to add option to upload file that is not Hidden & System
Identify if SSL inspection is enabled for web traffic
Obtain a user hash using the methods from 'Internal-Monologue'